--- a/src/Seq.App.Replication/Seq.App.Replication.csproj
+++ b/src/Seq.App.Replication/Seq.App.Replication.csproj
@@ -2,12 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <VersionPrefix>3.0.0</VersionPrefix>
+    <VersionPrefix>4.0.0</VersionPrefix>
     <Description>A simple event forwarder for Seq. Requires Seq 5.1+, for earlier Seq versions
       use the 2.x series of releases of this package.</Description>
     <Authors>Datalust and Contributors</Authors>
     <PackageTags>seq-app</PackageTags>
-    <PackageIcon>icon.png</PackageIcon>
+    <PackageIcon>seq-app-replication.png</PackageIcon>
     <PackageProjectUrl>https://github.com/datalust/seq-app-replication</PackageProjectUrl>
     <RepositoryUrl>https://github.com/datalust/seq-app-replication</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
@@ -18,12 +18,12 @@
 
   <ItemGroup>
     <PackageReference Include="Seq.Apps" Version="5.1.0" />
-    <PackageReference Include="Serilog" Version="2.9.0" />
-    <PackageReference Include="Serilog.Sinks.Seq" Version="2.0.0" />
+    <PackageReference Include="Serilog" Version="2.10.0" />
+    <PackageReference Include="Serilog.Sinks.Seq" Version="5.1.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="./icon.png" Pack="true" Visible="false" PackagePath="" />
+    <None Include="../../asset/seq-app-replication.png" Pack="true" Visible="false" PackagePath="" />
     <None Include="../../LICENSE" Pack="true" PackagePath="" />
     <None Include="./obj/publish/**/*" Exclude="./obj/publish/Seq.App.Replication.dll;./obj/publish/Seq.Apps.dll;./obj/publish/Serilog.dll" Pack="true" PackagePath="lib/$(TargetFramework)" />
   </ItemGroup>
