--- a/src/Seq.App.Replication/Seq.App.Replication.csproj
+++ b/src/Seq.App.Replication/Seq.App.Replication.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>netstandard2.0;net6.0</TargetFrameworks>
     <VersionPrefix>4.0.0</VersionPrefix>
     <Description>A simple event forwarder for Seq. Requires Seq 5.1+, for earlier Seq versions
       use the 2.x series of releases of this package.</Description>
