--- a/src/Seq.App.Replication/Seq.App.Replication.csproj
+++ b/src/Seq.App.Replication/Seq.App.Replication.csproj
@@ -1,10 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-    <VersionPrefix>4.0.0</VersionPrefix>
-    <Description>A simple event forwarder for Seq. Requires Seq 5.1+, for earlier Seq versions
-      use the 2.x series of releases of this package.</Description>
+    <TargetFramework>net6.0</TargetFramework>
+    <VersionPrefix>5.0.0</VersionPrefix>
+    <Description>A simple event forwarder for Seq. Requires Seq 2023.4+.</Description>
     <Authors>Datalust and Contributors</Authors>
     <PackageTags>seq-app</PackageTags>
     <PackageIcon>seq-app-replication.png</PackageIcon>
@@ -14,17 +13,19 @@
     <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
     <TreatSpecificWarningsAsErrors />
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Seq.Apps" Version="5.1.0" />
-    <PackageReference Include="Serilog" Version="2.10.0" />
-    <PackageReference Include="Serilog.Sinks.Seq" Version="5.1.1" />
+    <PackageReference Include="Seq.Apps" Version="2023.4.0" />
+    <PackageReference Include="Serilog" Version="3.0.1" />
+    <PackageReference Include="Serilog.Sinks.Seq" Version="5.2.3" />
   </ItemGroup>
 
   <ItemGroup>
     <None Include="../../asset/seq-app-replication.png" Pack="true" Visible="false" PackagePath="" />
     <None Include="../../LICENSE" Pack="true" PackagePath="" />
+    <None Include="../../README.md" Pack="true" PackagePath="" />
     <None Include="./obj/publish/**/*" Exclude="./obj/publish/Seq.App.Replication.dll;./obj/publish/Seq.Apps.dll;./obj/publish/Serilog.dll" Pack="true" PackagePath="lib/$(TargetFramework)" />
   </ItemGroup>
 
